--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -1,13 +1,9 @@
 .section {
     padding-top: 94px;
     padding-bottom: 94px;
+    background-color: $color-section-background;
   }
   
-.section-our-team {
-    background-color: #f5f4fa;
-    padding-top: 94px;
-    padding-bottom: 94px;
-  }
 
 .section-title {
     display: flex;
