--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,116 +1,137 @@
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -40%);
+  width: 528px;
+  height: 581px;
+  background-color: #ffffff;
 
-  
-  .modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -40%);
-    width: 528px;
-    height: 581px;
-    background-color: #ffffff;
-  
-    transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1),
-      opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-  
-    opacity: 1;
-  
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    align-items: center;
-    padding: 40px;
+  transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+
+  opacity: 1;
+
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px;
+
+ 
+}
+
+.form__input {
+  position: absolute;
+  width: 448px;
+  height: 40px;
+  margin: 0;
+  padding: 0;
+  padding-top: 11px;
+  padding-bottom: 11px;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  transition-property: border;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:focus-within,
+  &:focus-within + .form__input_icon {
+    border-color: #2196f3;
+    fill: #2196f3;
+    outline: none;
   }
-  
-  .form__textarea:focus-within,
-  .form__input:focus-within,
-  .form__input:focus-within + .form__input_icon {
+}
+.form__textarea {
+  width: 448px;
+  height: 120px;
+  padding-top: 12px;
+  padding-left: 16px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  resize: none;
+  transition-property: border;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:focus-within {
     border-color: #2196f3;
     fill: #2196f3;
     outline: none;
   }
   
-  .form__textarea::placeholder {
-    font-family: "Roboto";
-    font-size: 12px;
-    letter-spacing: 0.01em;
-    color: rgba(117, 117, 117, 0.5);
-  }
-  
-  .close-btn {
-    position: absolute;
-    top: 8px;
-    right: 8px;
-    width: 30px;
-    height: 30px;
-    background-color: #ffffff;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 50%;
-    cursor: pointer;
-    text-align: center;
-    justify-content: center;
-  }
-  
-  .is-hidden {
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-  }
-  
-  .is-hidden .modal {
-    transform: translate3d(0, -2rem, 0);
-    opacity: 0;
-  }
-  
-  .form__input {
-    position: absolute;
-    width: 448px;
-    height: 40px;
-    margin: 0;
-    padding: 0;
-    padding-top: 11px;
-    padding-bottom: 11px;
-    border-radius: 4px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    transition-property: border;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  .form__input_icon {
-    width: 18px;
-    height: 18px;
-    fill: black;
-    transition-property: fill;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  .form__textarea {
-    width: 448px;
-    height: 120px;
-    padding-top: 12px;
-    padding-left: 16px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    resize: none;
-    transition-property: border;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .checkbox {
-    position: absolute;
-    width: 419px;
-    height: 24px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  
-    margin: 0px;
-    margin-top: 20px;
-    margin-bottom: 30px;
-  }
-  
-  .checkbox__label::before {
+    &::placeholder {
+      font-family: "Roboto";
+      font-size: 12px;
+      letter-spacing: 0.01em;
+      color: rgba(117, 117, 117, 0.5);
+    }
+
+}
+
+.close-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  background-color: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  cursor: pointer;
+  text-align: center;
+  justify-content: center;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.is-hidden .modal {
+  transform: translate3d(0, -2rem, 0);
+  opacity: 0;
+}
+
+.form__input_icon {
+  width: 18px;
+  height: 18px;
+  fill: black;
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.checkbox {
+  position: absolute;
+  width: 419px;
+  height: 24px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  margin: 0px;
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+
+.checkbox__label {
+  font-family: "Roboto";
+  font-weight: 400;
+  width: 420px;
+  height: 24px;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 14px;
+  line-height: 1.71rem;
+  letter-spacing: 0.03em;
+  color: #757575;
+
+  &::before {
     display: inline-block;
     content: "";
     width: 16px;
@@ -119,97 +140,79 @@
     border-radius: 2px;
     transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-  
-  .checkbox__input:checked + .checkbox__label::before {
-    border: 1px solid #2196f3;
-    background-image: url(../images/icon-check.svg)
-  }
-  
-  
-  
-  
-  
-  
-  
-  .form__label {
-    width: 448px;
-    height: 58px;
-    margin: 0px;
-  
-    color: #757575;
-    font-family: "Roboto";
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.17em;
-    letter-spacing: 0.01em;
-  }
-  
-  
-      
-  
-  .checkbox__label {
-    font-family: "Roboto";
-    font-weight: 400;
-    width: 420px;
-    height: 24px;
-  
-  
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 14px;
-    line-height: 1.71rem;
-    letter-spacing: 0.03em;
-    color: #757575;
-  }
-  .checkbox__label--text_mark {
-    color: #2196f3;
-  }
 
-  .form__title {
-    width: 448px;
-    height: 23px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  
-    margin: 0px;
-    margin-bottom: 12px;
-  
-    font-family: "Roboto";
-    font-weight: bold;
-    font-size: 20px;
-    line-height: 1.15em;
-    letter-spacing: 0.03em;
-    color: #212121;
-  }
-  
-  .form__label_text {
-    margin: 0px;
-    margin-top: 10px;
-    margin-bottom: 4px;
-  }
-  
-  .form__input_icon_container {
-    position: relative;
-    width: 448px;
-    height: 40px;
-    transition-property: fill;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  .form__input_icon_container input {
-    padding-left: 42px;
-  }
-  
-  .form__input_icon_container svg {
-    position: absolute;
-    left: 12px;
-    top: 11px;
-  }
-  
-  .form__input_icon_container:focus-within {
+}
+
+.checkbox__label--text_mark {
+  color: #2196f3;
+}
+
+.checkbox__input:checked + .checkbox__label::before {
+  border: 1px solid #2196f3;
+  background-image: url(../images/icon-check.svg);
+}
+
+.form__label {
+  width: 448px;
+  height: 58px;
+  margin: 0px;
+
+  color: #757575;
+  font-family: "Roboto";
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17em;
+  letter-spacing: 0.01em;
+}
+
+
+
+
+.form__title {
+  width: 448px;
+  height: 23px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin: 0px;
+  margin-bottom: 12px;
+
+  font-family: "Roboto";
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 1.15em;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+
+.form__label_text {
+  margin: 0px;
+  margin-top: 10px;
+  margin-bottom: 4px;
+}
+
+.form__input_icon_container {
+  position: relative;
+  width: 448px;
+  height: 40px;
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form__input_icon_container input {
+  padding-left: 42px;
+}
+
+.form__input_icon_container svg {
+  position: absolute;
+  left: 12px;
+  top: 11px;
+
+  &:focus-within {
     fill: #2196f3;
     color: #2196f3;
-  }
+  }  
+}
+
