--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -4,8 +4,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #2196f3;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  background-color: $color-button-background;
+  box-shadow: 0px 4px 4px $color-button-box-shadow;
   border-radius: 4px;
   padding: 0;
   margin: auto;
@@ -17,9 +17,9 @@
 
   &:hover,
   &:focus {
-    background-color: #98c6eb;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-      0px 2px 2px rgba(0, 0, 0, 0.12);
+    background-color: $color-button-hover;
+    box-shadow: 0px 3px 1px $color-button-hover-shadow1, 0px 1px 2px $color-button-hover-shadow2,
+      0px 2px 2px $color-button-hover-shadow3;
   }
 }
 
