--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -2,3 +2,13 @@ $color-background: #ffffff;
 $color-border-bottom: #ececec;
 $color-main: #212121;
 $color-section-background: #f5f4fa;
+$color-describe: #757575;
+$color-fill: #2196f3;
+$color-article-icon-background: $color-section-background;
+$color-backdrop-background: rgba(0, 0, 0, 0.2);
+$color-button-background: $color-fill;
+$color-button-box-shadow: rgba(0, 0, 0, 0.15);
+$color-button-hover: #98c6eb;
+$color-button-hover-shadow1: rgba(0, 0, 0, 0.1);
+$color-button-hover-shadow2: rgba(0, 0, 0, 0.08);
+$color-button-hover-shadow3: rgba(0, 0, 0, 0.12);
