--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -12,3 +12,12 @@ $color-button-hover: #98c6eb;
 $color-button-hover-shadow1: rgba(0, 0, 0, 0.1);
 $color-button-hover-shadow2: rgba(0, 0, 0, 0.08);
 $color-button-hover-shadow3: rgba(0, 0, 0, 0.12);
+$color-button-text: $color-background;
+$color-form-button-background: $color-button-background;
+$color-form-button: $color-button-text;
+$color-button-icon: $color-background;
+$color-card-list-background: rgba(47, 48, 58, 0.8);
+$color-card-list-border: #afb1b8;
+$color-box-shadow1: rgba(0, 0, 0, 0.12);
+$color-box-shadow2: rgba(0, 0, 0, 0.14);
+$color-box-shadow3: rgba(0, 0, 0, 0.2);
