--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -30,7 +30,7 @@
   font-weight: bold;
   font-size: 16px;
   letter-spacing: 0.06em;
-  color: #ffffff;
+  color: $color-button-text;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -49,11 +49,11 @@
 .form__button {
   width: 200px;
   height: 50px;
-  background-color: #2196f3;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  background-color: $color-form-button-background;
+  box-shadow: 0px 4px 4px $color-button-box-shadow;
   border-radius: 4px;
   cursor: pointer;
-  color: #ffffff;
+  color: $color-form-button;
   letter-spacing: 0.06em;
   font-size: 16px;
   line-height: 1.87em;
@@ -65,9 +65,9 @@
 
   &:hover,
   &:focus {
-    background-color: #98c6eb;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-      0px 2px 2px rgba(0, 0, 0, 0.12);
+    background-color: $color-button-hover;
+    box-shadow: 0px 3px 1px $color-button-hover-shadow1, 0px 1px 2px $color-button-hover-shadow2,
+      0px 2px 2px $color-button-hover-shadow3;
   }
 }
 
@@ -77,8 +77,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #2196f3;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  background-color: $color-button-background;
+  box-shadow: 0px 4px 4px $color-button-box-shadow;
   border-radius: 4px;
   padding: 0;
   margin-right: 0;
@@ -91,9 +91,9 @@
 
   &:focus,
   &:hover {
-    background-color: #98c6eb;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-      0px 2px 2px rgba(0, 0, 0, 0.12);
+    background-color: $color-button-hover;
+    box-shadow: 0px 3px 1px $color-button-hover-shadow1, 0px 1px 2px $color-button-hover-shadow2,
+      0px 2px 2px $color-button-hover-shadow3;
   }
 }
 
@@ -104,7 +104,7 @@
   font-weight: bold;
   font-size: 16px;
   letter-spacing: 0.06em;
-  color: #ffffff;
+  color: $color-button-text;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -112,7 +112,7 @@
 .button__icon {
   width: 24px;
   height: 24px;
-  fill: #ffffff;
+  fill: $color-button-icon;
   margin-left: 24px;
 }
 
