--- a/sass/components/_card-list.scss
+++ b/sass/components/_card-list.scss
@@ -10,7 +10,7 @@
 .card-list__label {
   position: relative;
   overflow: hidden;
-  background-color: rgba(47, 48, 58, 0.8);
+  background-color: $color-card-list-background;
 }
 .card-list__label > .card-list__text {
   text-transform: uppercase;
@@ -23,8 +23,8 @@
   width: 370px;
   height: 70px;
   bottom: 0px;
-  color: #ffffff;
-  background-color: rgba(47, 48, 58, 0.8);
+  color: $color-background;
+  background-color: $color-card-list-background;
 
   display: flex;
   justify-content: center;
@@ -52,8 +52,8 @@
   width: 170px;
   height: 92px;
   border-radius: 4px;
-  border: 1px solid #afb1b8;
-  fill: #afb1b8;
+  border: 1px solid $color-card-list-border;
+  fill: $color-card-list-border;
 
   transition-property: fill, border;
   transition-duration: 250ms;
@@ -67,25 +67,25 @@
   width: 170px;
   height: 92px;
   border-radius: 4px;
-  border: 1px solid #afb1b8;
-  fill: #afb1b8;
+  border: 1px solid $color-card-list-border;
+  fill: $color-card-list-border;
 
   transition-property: fill, border;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-  .card-list__link:focus,
-  .card-list__link:hover {
-    border: 1px solid #2196f3;
-    fill: #2196f3;
+  &:focus,
+  &:hover {
+    border: 1px solid $color-fill;
+    fill: $color-fill;
   }
 }
 
 .card__item--figure {
   margin: 0;
-  background-color: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  background-color: $color-background;
+  box-shadow: 0px 1px 3px $color-box-shadow1, 0px 1px 1px $color-box-shadow2,
+    0px 2px 1px $color-box-shadow3;
   border-radius: 0px 0px 4px 4px;
   display: inline-block;
   text-align: center;
@@ -120,5 +120,5 @@
   line-height: 1.19;
   letter-spacing: 0.03em;
 
-  color: #757575;
+  color: $color-describe;
 }
