--- a/sass/components/_card-list.scss
+++ b/sass/components/_card-list.scss
@@ -58,6 +58,12 @@
   transition-property: fill, border;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+      border: 1px solid $color-fill;
+      fill: $color-fill;
+  }
 }
 
 .card-list__link {
@@ -67,19 +73,21 @@
   width: 170px;
   height: 92px;
   border-radius: 4px;
-  border: 1px solid $color-card-list-border;
-  fill: $color-card-list-border;
+  border: 1px solid grey;
+  fill: grey;
 
   transition-property: fill, border;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-  &:focus,
-  &:hover {
-    border: 1px solid $color-fill;
-    fill: $color-fill;
-  }
+  &:hover,
+  &:focus {
+      border: 1px solid blue;
+      fill: blue;
+    }
 }
+
+
 
 .card__item--figure {
   margin: 0;
