dodano ponownie main.scss

--- a/css/main.css
+++ b/css/main.css
@@ -40,12 +40,7 @@ h6 {
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
-}
-
-.section-our-team {
   background-color: #f5f4fa;
-  padding-top: 94px;
-  padding-bottom: 94px;
 }
 
 .section-title {
@@ -66,6 +61,64 @@ h6 {
   border-bottom: 1px solid #ececec;
   background-color: #ffffff;
   height: 80px;
+}
+
+.page-header__email {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-decoration: none;
+  width: 161px;
+  height: 16px;
+  margin-right: 30px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: #757575;
+  fill: #757575;
+  background-color: #ffffff;
+  transition-property: color, fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.page-header__email:hover, .page-header__email:focus {
+  color: #2196f3;
+  fill: #2196f3;
+}
+
+.email__icon {
+  width: 16px;
+  height: 12px;
+}
+
+.phone__icon {
+  width: 10px;
+  height: auto;
+}
+
+.page-header__phone {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-decoration: none;
+  width: 130px;
+  height: 16px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14em;
+  letter-spacing: 0.02em;
+  color: #757575;
+  fill: #757575;
+  transition-property: color, fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.page-header__phone:hover, .page-header__phone:focus {
+  color: #2196f3;
+  fill: #2196f3;
 }
 
 .footer {
@@ -117,34 +170,6 @@ h6 {
 
 .form-newsletter__input:focus-within {
   outline: none;
-}
-
-.head-overlay {
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/img-overlay.jpg");
-  background-size: cover;
-  background-position: center, center;
-  background-repeat: no-repeat;
-  background-color: #2f303a;
-  height: 600px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.head-overlay__text {
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  margin: auto;
-  width: 696px;
-  height: 120px;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  color: #ffffff;
 }
 
 .menu {
@@ -237,6 +262,34 @@ h6 {
   border-radius: 2px;
 }
 
+.head-overlay {
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/img-overlay.jpg");
+  background-size: cover;
+  background-position: center, center;
+  background-repeat: no-repeat;
+  background-color: #2f303a;
+  height: 600px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.head-overlay__text {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin: auto;
+  width: 696px;
+  height: 120px;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
 .footer-contact {
   width: 247px;
   height: 132px;
@@ -306,64 +359,6 @@ h6 {
   line-height: 1.71em;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
-}
-
-.page-header__email {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  text-decoration: none;
-  width: 161px;
-  height: 16px;
-  margin-right: 30px;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: #757575;
-  fill: #757575;
-  background-color: #ffffff;
-  transition-property: color, fill;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.page-header__email:hover, .page-header__email:focus {
-  color: #2196f3;
-  fill: #2196f3;
-}
-
-.email__icon {
-  width: 16px;
-  height: 12px;
-}
-
-.phone__icon {
-  width: 10px;
-  height: auto;
-}
-
-.page-header__phone {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  text-decoration: none;
-  width: 130px;
-  height: 16px;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14em;
-  letter-spacing: 0.02em;
-  color: #757575;
-  fill: #757575;
-  transition-property: color, fill;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.page-header__phone:hover, .page-header__phone:focus {
-  color: #2196f3;
-  fill: #2196f3;
 }
 
 .portfolio-cards__figcaption_name {
@@ -1060,15 +1055,14 @@ h6 {
   width: 170px;
   height: 92px;
   border-radius: 4px;
-  border: 1px solid #afb1b8;
-  fill: #afb1b8;
+  border: 1px solid grey;
+  fill: grey;
   transition-property: fill, border;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.card-list__link .card-list__link:focus,
-.card-list__link .card-list__link:hover {
+.card-list__link:hover, .card-list__link:focus {
   border: 1px solid #2196f3;
   fill: #2196f3;
 }
