--- a/sass/layout/_page-header.scss
+++ b/sass/layout/_page-header.scss
@@ -7,4 +7,69 @@
   height: 80px;
 }
 
+.page-header__email {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-decoration: none;
+  width: 161px;
+  height: 16px;
+  margin-right: 30px;
+
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+
+  color: #757575;
+  fill: #757575;
+  background-color: #ffffff;
+  transition-property: color, fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: #2196f3;
+    fill: #2196f3;
+  }
+}
+
+.email__icon {
+  width: 16px;
+  height: 12px;
+}
+
+.phone__icon {
+  width: 10px;
+  height: auto;
+}
+
+.page-header__phone {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-decoration: none;
+  width: 130px;
+  height: 16px;
+
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14em;
+  letter-spacing: 0.02em;
+
+  color: #757575;
+  fill: #757575;
+
+  transition-property: color, fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: #2196f3;
+    fill: #2196f3;
+  }
+}
+
 
