--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -4,7 +4,7 @@ $color-main: #212121;
 $color-section-background: #f5f4fa;
 $color-describe: #757575;
 $color-fill: #2196f3;
-$color-article-icon-background: $color-section-background;
+$color-article-icon-background: #f5f4fa;
 $color-backdrop-background: rgba(0, 0, 0, 0.2);
 $color-button-background: $color-fill;
 $color-button-box-shadow: rgba(0, 0, 0, 0.15);
